Restore ordering detached bookmark bar to the back for ChromeOS

Background:
1. The bookmark bar has two states: "attached", where it is part of a single
block with the rest of the topchrome and "detached" (only shown on the
stock NTP) where it appears to be part of the web content.
2. In views toolkit, the logic order of a view's child views determines
both its focus traversal order and its z-order.
3. Previously, the bookmark bar was being forcibly ordered before the rest
of the topchrome to allow other topchrome views to draw elements (for example,
ink drops) on top of it.
4. The combination of 2 and 3 caused tab traversal to be out of order.
5. In Material Refresh, the issue with ink drops is no longer relevant, so
the reordering was removed.
6. Except that ChromeOS has an "immersive mode" which hides the top chrome by
default but allows it to slide down over the web content on mouse over.
7. Since the detached bookmark bar is supposed to look like web content,
it remains visible in immersive mode.
8. ...and since it's no longer z-ordered behind the rest of the topchrome,
the tabstrip and toolbar remain out of sight, since they're sliding
down behind the bookmark bar.

This change reenables reordering in the detached case for ChromeOS because
IMO there isn't a good solution to this situation in a world where traversal
order and z-order can't be separated.

Bug: 857546
Change-Id: I4454ddb12bfcd9ab9b382c3455efb1b5ee5939ca
Reviewed-on: https://chromium-review.googlesource.com/1155656
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579396}
Former-commit-id: 043669abdd797467ab3aa37d6e9b4e28dd987372